<resources>
    <string name="app_name">Intents2</string>
    <string name="action_settings">Settings</string>
    <string name="name">Nombre</string>
    <string name="password">Clave</string>
    <string name="send">Enviar</string>
    <string name="show">Mostrar</string>
    <string name="date">Fecha</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
